<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="5dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    >


    <LinearLayout
        android:id="@+id/layoutItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/productImage"
            android:id="@+id/productImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/bag"
            android:textAlignment="center"
            android:textColor="@color/grayFont"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/productDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/bag"
            android:textAlignment="center"
            android:textColor="@color/grayFont"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/priceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_60"
                android:textColor="@color/backgroundBlueColor"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/salePriceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_40"
                android:textColor="@color/grayFont"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>